[gd_scene load_steps=4 format=2]

[ext_resource path="res://tool/WaveDesigner/WaveDesigner.gd" type="Script" id=1]
[ext_resource path="res://gui/panels/panel_outside.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/theme.tres" type="Theme" id=3]

[node name="WaveDesginer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LeftPart" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 145.0
margin_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/LeftPart"]
margin_right = 145.0
margin_bottom = 267.0
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPart/PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 113.0
margin_bottom = 235.0

[node name="NewButton" type="Button" parent="HBoxContainer/LeftPart/PanelContainer/VBoxContainer"]
margin_right = 81.0
margin_bottom = 57.0
focus_mode = 0
text = "new"

[node name="LoadButton" type="Button" parent="HBoxContainer/LeftPart/PanelContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 81.0
margin_bottom = 130.0
focus_mode = 0
text = "load"

[node name="SaveButton" type="Button" parent="HBoxContainer/LeftPart/PanelContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 81.0
margin_bottom = 203.0
focus_mode = 0
text = "save"

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/LeftPart"]
margin_top = 271.0
margin_right = 145.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/LeftPart/PanelContainer2"]
margin_left = 72.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 777.0
size_flags_horizontal = 4
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="WaveElements" type="VBoxContainer" parent="HBoxContainer/LeftPart/PanelContainer2/ScrollContainer"]

[node name="WavePanel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 149.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/WavePanel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1739.0
margin_bottom = 1048.0
mouse_filter = 1

[node name="WaveParts" type="VBoxContainer" parent="HBoxContainer/WavePanel/ScrollContainer"]
custom_constants/separation = 20

[node name="Control" type="Control" parent="."]

[connection signal="pressed" from="HBoxContainer/LeftPart/PanelContainer/VBoxContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPart/PanelContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPart/PanelContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
